Add landing script on home page

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://materialdesignicons.com/cdn/2.0.46/css/materialdesignicons.min.css" media="all" rel="stylesheet">
-    <title>Secure Messanger</title>
+    <title>Battle Todo</title>
   </head>
   <body>
     <noscript>
